2006-11-25  Claudio Fontana  <claudio@gnu.org>

	* libidu/scanners.c (get_token_lisp): provide rough support for
	  character constants.

2006-10-19  Claudio Fontana  <claudio@gnu.org>

	* libidu/scanners.c (get_token_lisp): (tiny) fix bug in double
	  quoted string parsing (fix provided by Walter Sosa).
	
2006-08-22  Claudio Fontana  <claudio@gnu.org>

	* doc/idutils.texi: fix wrong example .emacs entry, where
	  a non existant 'gid' lisp is loaded instead of 'idutils'.

2006-08-05  Claudio Fontana  <claudio@gnu.org>

	version 4.2 released.
	
2006-07-22  Claudio Fontana  <claudio@gnu.org>

	* configure.ac: add header checks for terminal-related stuff.
	* configure.ac: add check for lstat, bumped to 4.2

	* libidu/idfile.c: replace include sys/stat.h with lstat.h.
	* libidu/scanners.c: likewise.
	* libidu/walker.c: likewise.
	* src/mkid.c: likewise.

	* libidu/walker.c: provide replacement function for lstat
	  in a somewhat convoluted way, using plain stat.

2006-07-22  Claudio Fontana  <claudio@gnu.org>

	* configure.ac: add check for sbrk
	
	* src/mkid.c (get_process_heap): new function.
	  Calls sbrk() if available, or NULL if unsupported.

	* src/mkid.c (report_statistics): (nochange)
	  the reported heap usage is 0+0 if sbrk is
	  not available.

2006-07-22  Claudio Fontana  <claudio@gnu.org>

	upgraded gnulib.

2006-07-22  Claudio Fontana  <claudio@gnu.org>

	removed generated files from CVS

	* src/lid.c (get_editor_argv): new function that
	  tokenizes EDITOR environment variable.

	* src/lid.c (report_edit): use get_editor_argv;
	  some cleanup; set using_vi for vim too.

2006-07-06  Claudio Fontana  <claudio@gnu.org>

	* src/Makefile.in: regenerated.
	* src/mkid.c: remove useless (and wrong) const. 

2006-06-26  Claudio Fontana  <claudio@gnu.org>

	* libidu/walker.c (walk_flink): add missing #ifdef HAVE_LINK before
	  calling hard-link specific code (patch #5165).

	* libidu/scanners.c (get_token_perl): fix problem in perl support