@@ -1,5 +1,5 @@
 /* scanners.c -- file & directory name manipulations
-   Copyright (C) 1986, 1995, 1996, 1999, 2000 Free Software Foundation, Inc.
+   Copyright (C) 1986, 1995, 1996, 1999, 2000, 2007 Free Software Foundation, Inc.
    Written by Greg McGary <gkm@gnu.ai.mit.edu>
 
    This program is free software; you can redistribute it and/or modify
@@ -1749,7 +1749,7 @@ get_token_lisp (FILE *in_FILE, void const *args, int *flags)
 	    {
 	      while (is_IDENT (c = getc (in_FILE)))
 		*id++ = c;
-	      if (c == '[')
+	      if (0 /* c == '[' */)
 		{
 		  c = getc (in_FILE);
 		  if (c == ']')
